# NOIA2

./: .env  .gitignore  1.txt  BOSS_list.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  build_python.py  build_server.py  down_zed_remote.py  generate_key.sh  gh-proxy.sh  index.html  missing.txt  missing_npc_names_zh.json  nickname_resolver.py  npc_data.json  npc_names.json  package-lock.json  package.json  pnpm-lock.yaml  processor.kt  proxy.sh  skills-lock.json  test_api.py  tmp_event_api.json  tmp_event_board.html  tmp_eventon_runtime.html  vite.config.ts
.github/workflows/: release.yml
docs/: AION2_PACKET_PROTOCOL_ANALYSIS.zh-CN.md  AUTO_UPDATE.md  AUTO_UPDATE.zh-CN.md
screenshots/: .gitkeep
scripts/: compare-aion2-npc-names.mjs  copy-windivert-runtime.ps1  export-aion2-dps-max-party-total-damage.mjs  generate-proxy-updater-manifest.mjs  get-yxdr-price.js  migrate-noia2dps-to-aion2-dps.mjs  release-version.mjs  resize-aion2-skill-icons.py  sync-ui-locales.mjs
scripts/output/: aion2-dps-max-party-total-damage.json  missing-aion2-boss-npc-names-zh.json  missing-aion2-npc-names-zh.json
scripts/sql/: create-aion2-dps-rank.sql  create-get-aion2-dps-max-party-total-damage.sql  create-get-stat-by-class-mob.sql  create-insert-aion2-dps-and-update-rank.sql  rebuild-aion2-dps-rank-from-history.sql  rebuild-aion2-dps-rank.sql
src/: App.css  App.tsx  AppLayout.tsx  Splash.tsx  game-config.ts  index.css  main.tsx  updater.tsx
src-python/: ana.py  auto_detect.py  build_python.py  config.json  debug.py  requirements.txt  server.py  test.py
src-python/aion2/: dps_meter.py
src-python/data/: healing_skill_code.json  mob_code.json  skill_code.json
src-python/utils/: config.py  logger.py
src-tauri/: 2  Cargo.toml  build.rs  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/data/: boss_hp.json  boss_ids.json  boss_maxhp.json  buff_templates.json  healing_skill_code.json  npc_names_zh.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  dps_server.rs  http.rs  lib.rs  main.rs  tray.rs
src-tauri/src/dps_meter/: config.rs  history.rs  logging.rs  mod.rs
src-tauri/src/dps_meter/api/: commands.rs
src-tauri/src/dps_meter/capture/: accumulator.rs  assembler.rs  capturer.rs  channel.rs  dispatcher.rs  mod.rs  ping_tracker.rs  processor.rs  windivert_capturer.rs
src-tauri/src/dps_meter/engine/: calculator.rs  meter.rs  mod.rs
src-tauri/src/dps_meter/models/: combat.rs  diagnostics.rs  mod.rs  packet.rs
src-tauri/src/dps_meter/storage/: data_storage.rs  loaders.rs  mod.rs
src-tauri/src/plugins/: aion2_focus.rs  aion2_overlay.rs  dps_overlay.rs  http.rs  logger.rs  mod.rs  shortcut.rs  system_tray.rs  window_tracking.rs
src/components/: AuthDialog.tsx  LanguageSwitcher.tsx  ModeToggle.tsx  SettingsPanel.tsx  SideBar.tsx  SplashCursor.tsx  TitleBar.tsx  TopNavigation.tsx  TrueFocus.tsx  about-settings.tsx  aion2-settings.tsx  app-topbar.tsx  auth-deep-link-handler.tsx  auth-modal.tsx  bank-card-carousel.tsx  battle-target-dps-chart.tsx  battle-target-transactions.tsx  changelog-dialog.tsx  character-card-carousel.tsx  custom-tooltip.tsx  dps-history.tsx  dps-light-guide-dialog.tsx  dps-meter-launcher-button.tsx  game-selector.tsx  home-character-carousel.tsx  home-news-carousel.tsx  language-toggle.tsx  main-shell.tsx  (+12 more)
(+215 files in other folders)
